--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,13 @@ AllCops:
     - db/schema.rb
 Rails:
   Enabled: true
+
+# Editor handles this. Rubocop complains too much.
+TrailingWhitespace:
+  Enabled: false
+
+Metrics/LineLength:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
