--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,7 @@ AllCops:
     - db/schema.rb
 Rails:
   Enabled: true
+Style/Documentation:
+    Enabled: false
+Style/TrailingWhitespace:
+    Enabled: false
