--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ AllCops:
 Rails:
   Enabled: true
 Style/Documentation:
-    Enabled: false
+  Enabled: false
 Style/TrailingWhitespace:
-    Enabled: false
+  Enabled: false
+Metrics/LineLength:
+  Enabled: false
